--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1602634261"></script>
-      <script src="dom.js?v=1602634261"></script>
-      <script src="api.js?v=1602634261"></script>
-      <script src="index.js?v=1602634261"></script>
-      <script src="sbs2-markup/highlight.js?v=1602634261"></script>
-      <script src="sbs2-markup/parse.js?v=1602634261"></script>
-      <script src="sbs2-markup/render.js?v=1602634261"></script>
+      <script src="libbo.js?v=1602651035"></script>
+      <script src="dom.js?v=1602651035"></script>
+      <script src="api.js?v=1602651035"></script>
+      <script src="index.js?v=1602651035"></script>
+      <script src="sbs2-markup/highlight.js?v=1602651035"></script>
+      <script src="sbs2-markup/parse.js?v=1602651035"></script>
+      <script src="sbs2-markup/render.js?v=1602651035"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1602634261" />
+      <link rel="stylesheet" href="index.css?v=1602651035" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -1050,15 +1050,17 @@ function retext(el, attr)
    <div class="uk-form-controls" uk-margin>
       <label data-pagename class="uk-form-label" uk-margin>
          <span>Name:</span>
-         <input class="uk-input uk-form-large" name="name">
+         <input class="uk-input uk-form-large" name="name" required>
       </label>
       <label data-pagetype class="uk-form-label" uk-margin>
          <span>Page Type:</span>
-         <div data-tmpl="pagetypeselect" data-tmpld='{"name":"type"}'></div>
+         <div data-tmpl="pagetypeselect" data-tmpld='{"name":"type"}' required></div>
       </label>
       <label class="uk-form-label" uk-margin>
          <span>Content:</span>
          <textarea rows=15 class="uk-textarea uk-resize-vertical" name="content"></textarea>
+         <a href="#" class="uk-block uk-text-right" data-contentimage
+            uk-toggle="target: #fileupload">Insert image link</a>
       </label>
       <label class="uk-form-label" uk-margin>
          <span>Markup:</span>
@@ -1071,6 +1073,11 @@ function retext(el, attr)
       <label data-pagecategory class="uk-form-label" uk-margin>
          <span>Parent Category:</span>
          <div data-categoryselect name="parentId"></div>
+      </label>
+      <label data-pagename class="uk-form-label" uk-margin>
+         <span>Tagline:</span>
+         <input class="uk-input" name="values.tagline">
+         <p class="uk-text-meta">A short description of the page, used in listings</p>
       </label>
       <label class="uk-form-label" uk-margin>Images:</label>
       <div data-imageselect name="values.photos"></div>
