--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1602884676"></script>
-      <script src="dom.js?v=1602884676"></script>
-      <script src="api.js?v=1602884676"></script>
-      <script src="index.js?v=1602884676"></script>
-      <script src="sbs2-markup/highlight.js?v=1602884676"></script>
-      <script src="sbs2-markup/parse.js?v=1602884676"></script>
-      <script src="sbs2-markup/render.js?v=1602884676"></script>
+      <script src="libbo.js?v=1602889754"></script>
+      <script src="dom.js?v=1602889754"></script>
+      <script src="api.js?v=1602889754"></script>
+      <script src="index.js?v=1602889754"></script>
+      <script src="sbs2-markup/highlight.js?v=1602889754"></script>
+      <script src="sbs2-markup/parse.js?v=1602889754"></script>
+      <script src="sbs2-markup/render.js?v=1602889754"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1602884676" />
+      <link rel="stylesheet" href="index.css?v=1602889754" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -68,6 +68,18 @@ function typeToIcon(el, replace)
          (ttoic[replace] || "close"));
    } 
    return el.curicon;
+}
+function pwcountset(el, replace)
+{
+   if(replace)
+   {
+      el.textContent = replace;
+      if(replace)
+         el.parentNode.removeAttribute('hidden');
+      else
+         el.parentNode.setAttribute("hidden", "");
+   }
+   return el.textContent;
 }
 function simpleAction(el, replace)
 {
@@ -214,7 +226,8 @@ function retext(el, attr)
                </div>
             </div>
             <!-- LOC:RIGHTPANE -->
-            <div id="rightpane" class="uk-width-auto uk-flex uk-flex-column uk-height-1-1" hidden>
+            <div id="rightpane" class="uk-width-auto uk-position-relative uk-flex uk-flex-column 
+               uk-height-1-1" hidden>
                <!-- LOC:RIGHTPANENAV -->
                <div id="rightpanenav" class="tabnav uk-grid uk-grid-collapse 
                    uk-child-width-expand uk-text-center" 
@@ -243,7 +256,7 @@ function retext(el, attr)
                <!-- LOC:RIGHTPANECONTENT -->
                <ul id="rightpanecontent" class="uk-switcher uk-flex-1" uk-overflow-auto>
                   <!-- LOC:USERNEW -->
-                  <li>
+                  <li id="userloginpane">
                      <div class="uk-container" uk-margin>
                         <!-- LOC:USERLOGIN -->
                         <form id="loginform" class="uk-padding-small" onsubmit="return false">
@@ -351,7 +364,7 @@ function retext(el, attr)
                      </div>
                   </li>
                   <!-- LOC:USER -->
-                  <li>
+                  <li id="userpane">
                      <div class="uk-container" uk-margin>
                         <div id="userdata" class="uk-padding-small" uk-margin>
                            <div class="uk-flex uk-flex-bottom">
@@ -388,10 +401,12 @@ function retext(el, attr)
                   </li>
                   <!-- LOC:ACTIVITY -->
                   <li id="pulseparent" class="uk-margin-large-bottom">
+                     <span id="rightpaneactivityloading" class="uk-cover" uk-spinner="ratio: 2" hidden></span>
                      <ul id="pulse" class="uk-list uk-list-divider"></ul>
                   </li>
                   <!-- LOC:WATCHES -->
                   <li class="uk-margin-large-bottom">
+                     <span id="rightpanewatchesloading" class="uk-cover" uk-spinner="ratio: 2" hidden></span>
                      <ul id="watches" class="uk-list uk-list-divider"></ul>
                   </li>
                   <!-- LOC:SEARCH -->
@@ -445,7 +460,6 @@ function retext(el, attr)
                         <div data-tmpl="searchresultsection" data-tmpld='{"data-text":"Chat"}'
                              id="searchchatresults"></div>
                      </ul>
-                     <!--<ul id="searchpane" class="uk-list uk-list-divider"></ul>-->
                   </li>
                   <!-- LOC:LOGS -->
                   <li id="logsparent">
@@ -453,13 +467,13 @@ function retext(el, attr)
                   </li>
                </ul>
                <div id="rightpanefooter" class="databar uk-flex">
-                  <span class="uk-flex-none">SmileBASIC Source - 2020</span>
+                  <span id="rightpanefootername" class=" uk-flex uk-flex-middle noselect">
+                     <span class="uk-flex-none" uk-icon="icon: triangle-left; ratio: 0.8"></span>
+                     <span class="uk-text-truncate">SmileBASIC Source - 2020</span>
+                  </span>
                   <div class="uk-width-expand">
                      <!-- Just a space filler for now, do something with this later? -->
                   </div>
-                  <!--<div class="uk-width-expand">
-                     <a href="#" id="darkmodetoggle" uk-tooltip="Dark mode">&#x1F311;</a>
-                  </div>-->
                   <a href="" class="uk-flex-none" uk-toggle="target: #aboutprivacy">About/Privacy</a>
                </div>
             </div>
@@ -684,10 +698,10 @@ function retext(el, attr)
             <div class="pwnamerow uk-flex uk-flex-middle">
                <span class="uk-flex-none uk-margin-small-right" data-type=".typeToIcon" 
                   uk-icon="ratio: 1.0"></span>
-               <a data-pwlink="href" class="uk-flex-1 uk-text-truncate uk-text-emphasis pwname
-                  uk-margin-right" data-spa data-pwname=".textContent"></a>
-               <a data-clearcount href="#">
-                  <span data-pwcount=".textContent" class="uk-label uk-label-danger"></span>
+               <a data-pwlink="href" class="uk-flex-1 uk-text-truncate uk-text-emphasis pwname" 
+                  data-spa data-pwname=".textContent"></a>
+               <a data-clearcount href="#" class="uk-margin-left" hidden>
+                  <span data-pwcount=".pwcountset" class="uk-label uk-label-danger"></span>
                </a>
             </div>
             <div class="uk-flex uk-flex-bottom">
