--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1602891564"></script>
-      <script src="dom.js?v=1602891564"></script>
-      <script src="api.js?v=1602891564"></script>
-      <script src="index.js?v=1602891564"></script>
-      <script src="sbs2-markup/highlight.js?v=1602891564"></script>
-      <script src="sbs2-markup/parse.js?v=1602891564"></script>
-      <script src="sbs2-markup/render.js?v=1602891564"></script>
+      <script src="libbo.js?v=1603053458"></script>
+      <script src="dom.js?v=1603053458"></script>
+      <script src="api.js?v=1603053458"></script>
+      <script src="index.js?v=1603053458"></script>
+      <script src="sbs2-markup/highlight.js?v=1603053458"></script>
+      <script src="sbs2-markup/parse.js?v=1603053458"></script>
+      <script src="sbs2-markup/render.js?v=1603053458"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1602891564" />
+      <link rel="stylesheet" href="index.css?v=1603053458" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -776,7 +776,8 @@ function retext(el, attr)
             <a href="#" class="messagecontrol" uk-icon="cog"></a>
          </div>
          <li id="breadcrumb">
-            <a data-link="href" data-spa data-text=".textContent"></a>
+            <a data-link="href" data-spa data-text=".textContent"
+               class=""></a>
          </li>
          <a id="sbslink" data-link="href" data-spa></a>
          <div id="booloption">
@@ -942,11 +943,26 @@ function retext(el, attr)
                uk-text-truncate slideshowtext"></p>
             </div>
          </li>
+         <li id="slideshowitem">
+            <img data-src=".src" uk-cover>
+         </li>
          <div id="collectionitem" class="uk-flex uk-flex-middle uk-card uk-card-default"
             data-inline>
             <div data-item class="uk-width-expand"></div>
             <a href="#" uk-icon="close" class="uk-text-danger uk-flex-none"
       onclick="event.preventDefault();var p=this.parentNode;p.parentNode.removeChild(p);"></a>
+         </div>
+         <div id="slideshow" uk-slideshow="animation: push; ratio: 5:3;
+                  autoplay: true; autoplay-interval: 6000; pause-on-hover: true">
+            <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
+               <ul data-slideshowitems class="uk-slideshow-items">
+               </ul>
+               <a class="uk-position-center-left uk-position-small uk-hidden-hover" 
+                  href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
+               <a class="uk-position-center-right uk-position-small uk-hidden-hover" 
+                  href="#" uk-slidenav-next uk-slideshow-item="next"></a>
+            </div>
+            <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-margin"></ul>
          </div>
          <!-- LOC:ROUTES -->
          <div id="routehome" class="uk-container uk-margin-top uk-margin-bottom">
@@ -956,18 +972,7 @@ function retext(el, attr)
             This website is in development! There's a lot of missing features, 
             but we're gonna keep adding stuff until it's good!</p>
             <div data-slideshowcontainer>
-               <div data-slideshow uk-slideshow="animation: push; ratio: 5:3;
-                  autoplay: true; autoplay-interval: 6000; pause-on-hover: true">
-    <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
-        <ul data-slideshowitems class="uk-slideshow-items">
-        </ul>
-        <a class="uk-position-center-left uk-position-small uk-hidden-hover" 
-           href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
-        <a class="uk-position-center-right uk-position-small uk-hidden-hover" 
-           href="#" uk-slidenav-next uk-slideshow-item="next"></a>
-    </div>
-    <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-margin"></ul>
-               </div>
+               <div data-tmpl="slideshow"></div>
             </div>
             <h3><a href="?p=category-0" data-spa>Browse Everything</a></h3>
             <div class="" data-homehistory></div>
@@ -993,6 +998,15 @@ function retext(el, attr)
             <div class="uk-flex">
                <h1 class="uk-width-expand uk-margin-small-right" data-title=".textContent"></h1>
                <div data-tmpl="pagecontrols"></div>
+            </div>
+            <div data-programcontainer hidden>
+               <div data-tmpl="slideshow"></div>
+               <div class="uk-flex uk-flex-bottom uk-margin-small-left 
+                  uk-margin-small-right">
+                  <span class="uk-width-expand"></span>
+                  <span class="uk-text-large key uk-flex-none" 
+                     data-key=".textContent"></span>
+               </div>
             </div>
             <p data-content=".renderContent" data-format="data-fmt" 
                class="uk-text-break content uk-margin-remove-top"></p>
