--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1603140351"></script>
-      <script src="dom.js?v=1603140351"></script>
-      <script src="api.js?v=1603140351"></script>
-      <script src="index.js?v=1603140351"></script>
-      <script src="sbs2-markup/highlight.js?v=1603140351"></script>
-      <script src="sbs2-markup/parse.js?v=1603140351"></script>
-      <script src="sbs2-markup/render.js?v=1603140351"></script>
+      <script src="libbo.js?v=1603140516"></script>
+      <script src="dom.js?v=1603140516"></script>
+      <script src="api.js?v=1603140516"></script>
+      <script src="index.js?v=1603140516"></script>
+      <script src="sbs2-markup/highlight.js?v=1603140516"></script>
+      <script src="sbs2-markup/parse.js?v=1603140516"></script>
+      <script src="sbs2-markup/render.js?v=1603140516"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1603140351" />
+      <link rel="stylesheet" href="index.css?v=1603140516" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -1003,7 +1003,7 @@ function retext(el, attr)
             </div>
             <h3><a href="?p=category-0" data-spa>Browse Everything</a></h3>
             <div class="" data-homehistory></div>
-            <a href="?p=test" data-spa>Test area</a>
+            <!--<a href="?p=test" data-spa>Test area</a>-->
          </div>
          <div id="routeerror" class="uk-container uk-margin-top uk-margin-bottom">
             <h1>ERROR - <span data-title=".textContent"></span></h1>
