Fixed pwuser dropdown (thanks uikit)

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1603260229"></script>
-      <script src="dom.js?v=1603260229"></script>
-      <script src="api.js?v=1603260229"></script>
-      <script src="index.js?v=1603260229"></script>
-      <script src="sbs2-markup/highlight.js?v=1603260229"></script>
-      <script src="sbs2-markup/parse.js?v=1603260229"></script>
-      <script src="sbs2-markup/render.js?v=1603260229"></script>
+      <script src="libbo.js?v=1603288650"></script>
+      <script src="dom.js?v=1603288650"></script>
+      <script src="api.js?v=1603288650"></script>
+      <script src="index.js?v=1603288650"></script>
+      <script src="sbs2-markup/highlight.js?v=1603288650"></script>
+      <script src="sbs2-markup/parse.js?v=1603288650"></script>
+      <script src="sbs2-markup/render.js?v=1603288650"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1603260229" />
+      <link rel="stylesheet" href="index.css?v=1603288650" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -735,7 +735,7 @@ function retext(el, attr)
               WORK without that!! -->
          <div id="pwuser" class="ufk-inline">
             <img data-useravatar="src" class="" width=20 height=20>
-            <div uk-dropdown>
+            <div uk-dropdown="boundary: #website; pos: bottom-right;">
                <a data-userlink="href" data-spa class="username" data-username=".textContent"></a>
                <table class="uk-table uk-table-divider uk-table-small uk-table-middle">
                   <tr data-comment data-count="0" data-firstdate="" data-lastdate="" 
